tests/NormalTests/paczka1/fuzzy1/37841147.err
Error in line 13: mZFit8wCpw A766 34,3
Error in line 22: S767 S694 6,1
